# CodeReviewBot

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: style_check.yml
CodeReviewBot/: manage.py
CodeReviewBot/CodeReviewBot/: asgi.py  settings.py  urls.py  wsgi.py
CodeReviewBot/tests/core/: conftest.py  test_basic_batabase.py  test_basic_views.py  test_examples.py
CodeReviewBot/users/: models.py  urls.py
tests/core/: conftest.py  test_examples.py  test_somefile.py
