[tool.poetry]
name = "codecodencode"
version = "0.1.0"
description = ""
authors = ["Flantropy <80071496+Flantropy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest-django = "^4.4.0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
